# model__update_object_store.go
@@ -1,0 +1,15 @@
+/*
+ * SmdService
+ *
+ * Resource for managing storage
+ *
+ * API version: 1.0.0
+ * Contact: canzhu@deeproute.ai
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package smdclient
+
+type UpdateObjectStore struct {
+	GatewayInstances int32 `json:"gateway_instances"`
+}
