# model_routes_object_store_update_params.go
@@ -1,0 +1,15 @@
+/*
+ * SmdService
+ *
+ * Resource for managing storage
+ *
+ * API version: 1.0.0
+ * Contact: canzhu@deeproute.ai
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package smdclient
+
+type RoutesObjectStoreUpdateParams struct {
+	UpdateObjectStore *UpdateObjectStore `json:"update_object_store"`
+}
